css fix for account details on small and medium screen

--- a/app/styles/_my_account.scss
+++ b/app/styles/_my_account.scss
@@ -1,4 +1,5 @@
 .my_account{
+  padding-left: 1em;
   .section-title {
     color: white;
     font-family: $header-font-family;
